<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lab.MainActivity">
    <item
        android:id="@+id/new_place_item"
        android:orderInCategory="100"
        android:title="@string/new_place"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_add_circle_outline_white_24dp"
        />
    <item
        android:id="@+id/my_places_list_item"
        android:orderInCategory="100"
        android:title="@string/my_places_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_format_list_bulleted_white_24dp"
        />
    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_info_white_24dp"
        />

</menu>
